@@ -1,4 +1,5 @@
 0.4.2
+    - Spurious NAMES replies will not get into the recall buffer now
 
 0.4.1 Tue Sep 30 19:23:43 GMT 2008
     - Fixed a serious typo
